# krx-rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/: SECURITY.md  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  (+3 more)
docs/: KRX_API_Spec.index.md  api-guide.md  configuration.md  examples.md  field-domains.md  getting-started.md  troubleshooting.md
examples/: simple_fetch.rs  type_conversion_test.rs  with_logging.rs
samples/: bon_dd_trd_20240104.json  drvprod_dd_trd_20240104.json  drvprod_dd_trd_20240105.json  elw_bydd_trd_20240104.json  elw_bydd_trd_20240105.json  eqkfu_ksq_bydd_trd_20240104.json  eqkfu_ksq_bydd_trd_20240105.json  eqkop_bydd_trd_20240104.json  eqkop_bydd_trd_20240105.json  eqsfu_stk_bydd_trd_20240104.json  eqsfu_stk_bydd_trd_20240105.json  eqsop_bydd_trd_20240104.json  eqsop_bydd_trd_20240105.json  etf_bydd_trd_20240105.json  ets_bydd_trd_20240104.json  ets_bydd_trd_20240105.json  fut_bydd_trd_20240105.json  knx_isu_base_info_20240105.json  kospi_dd_trd_20240104.json  ksq_bydd_trd_20240104.json  oil_bydd_trd_20240104.json  smb_bydd_trd_20240104.json  smb_bydd_trd_20240105.json  sr_bydd_trd_20240104.json  sri_bond_info_20240105.json  stk_bydd_trd_20240104.json  stk_isu_base_info_20240105.json  sw_bydd_trd_20240105.json
src/: client.rs  error.rs  lib.rs  logging.rs
tests/: api_bond_tests.rs  api_derivative_tests.rs  api_esg_tests.rs  api_etp_tests.rs  api_general_tests.rs  api_index_tests.rs  api_stock_tests.rs  builder_tests.rs  client_tests.rs  common_tests.rs  deserializer_tests.rs  integration_tests.rs
(+95 files in other folders)
