[package]
name = "krx-rs"
version = "0.1.0"
edition = "2024"
authors = ["seobaeksol <seobeaksol@gmail.com>"]
license = "MIT"
description = "KRX Open API를 위한 Rust 클라이언트"
repository = "https://github.com/seobaeksol/krx-rs"
homepage = "https://github.com/seobaeksol/krx-rs"
documentation = "https://docs.rs/krx-rs"
readme = "README.md"
keywords = ["krx", "korea", "stock", "finance", "api"]
categories = ["api-bindings", "finance"]
rust-version = "1.87.0"

[dependencies]
# 비동기 런타임
tokio = { version = "1.45", features = ["full"] }

# HTTP 클라이언트
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }

# 데이터 처리
polars = { version = "0.49", features = ["lazy", "serde", "json", "temporal"] }

# 직렬화/역직렬화
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 오류 처리
thiserror = "2.0"

# 날짜/시간 처리
chrono = { version = "0.4", features = ["serde"] }

# 로깅
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI 도구용
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
# 테스트용
tokio-test = "0.4"
wiremock = "0.6"
pretty_assertions = "1.4"
dotenvy = "0.15.7"
